--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-	"name": "fcc-api-projects-boilerplate",
+	"name": "team-bidii-timestamp-app",
 	"version": "0.0.1",
-	"description": "An FCC Backend Challenge",
+	"description": "A timestamp app",
+	"engines": {
+		"node": "12.x"
+	},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"express": "^4.15.2",
+		"cors": "^2.8.0",
+		"ejs": "^2.5.6"
 	},
-	"engines": {
-		"node": "4.4.5"
+	"devDependencies": {
+		"got": "^11.3.0",
+		"tape": "^4.7.0"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://githost.com/camper/repo.git"
+		"url": "https://github/dngugi/timestamp-app"
 	},
 	"keywords": [
 		"node",
+		"heroku",
 		"hyperdev",
 		"express",
 		"freecodecamp"
